--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 mb-2">
-      <img src="assets/img/home.jpg" alt="Welcome cat image"/>
+      <img class="img-fluid d-none d-sm-block" src="assets/img/home.jpg" alt="Welcome cat image"/>
+    </div>
+
+    <div class="col-md-6">
+      <h2>Welcome</h2>
     </div>
   </div>
 </div>
