--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-6">
-      <h2>Welcome</h2>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
