--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,12 +1,23 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4">
+<form class="form mt-4" (ngSubmit)="login()">
   <div class="form-group">
-    <input class="form-control" placeholder="Username"/>
+    <input
+      class="form-control"
+      placeholder="Username"
+      [(ngModel)]="user"
+      name="user"
+    />
   </div>
 
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Password"/>
+    <input
+      type="password"
+      class="form-control"
+      placeholder="Password"
+      [(ngModel)]="password"
+      name="password"
+    />
   </div>
 
   <button type="submit" class="btn btn-secondary btn-block">Login</button>
