--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,13 +1,18 @@
 <h4 class="text-center">Login</h4>
 
-<form class="form mt-4" (ngSubmit)="login()">
+<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
   <div class="form-group">
     <input
       class="form-control"
       placeholder="Username"
       [(ngModel)]="user"
       name="user"
+      #userField="ngModel"
+      required
     />
+    <app-message
+      *ngIf="userField.invalid && userField.touched"
+      message="User required"></app-message>
   </div>
 
   <div class="form-group">
@@ -17,8 +22,13 @@
       placeholder="Password"
       [(ngModel)]="password"
       name="password"
+      #passwordField="ngModel"
+      required
     />
+    <app-message
+      *ngIf="passwordField.invalid && passwordField.touched"
+      message="Password required"></app-message>
   </div>
 
-  <button type="submit" class="btn btn-secondary btn-block">Login</button>
+  <button type="submit" class="btn btn-secondary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
